src/Views/Contacts/Contacts.css
.contact-body{
    height:240px;
    width:100%;
    background: rgb(160, 151, 132);
    opacity: .70;
}

.contact-content{
    display:flex;
    flex-direction: column;
    align-items: center;
    font-family: 'Rokkitt', serif;
}

.social-media-icons{
    margin-right: 100px;
    margin-left: 10px;
}

@media(min-width: 415px){
    .contact-content{
        font-size: 90%;
    }
}

